--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -20,6 +20,6 @@
   padding: 5px 10px;
   cursor: pointer;
   color: #000;
-  background-color: lightblue;
+  background-color: skyblue;
   border-radius: 5px;
 }
