--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -15,7 +15,7 @@
 .input {
   padding: 10px 20px;
   border: 2px solid #ddd;
-  background-color: #000;
+  background-color: transparent;
   outline: none;
   color: #bbb;
 }
