--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,13 +8,25 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  background-color: #111;
-  color: #bbb;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.light {
+  background-color: #ffffff;
+  color: #111;
+}
+
+.dark {
+  background-color: #111;
+  color: #bbb;
+}
+
+.theme {
+  transition: 1s all ease;
 }
 
 .container {
