--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -12,6 +12,7 @@
 }
 
 .imageContainer {
+  flex: 1;
   width: 400px;
   height: 260px;
   position: relative;
@@ -22,6 +23,7 @@
 }
 
 .content {
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 20px;
